# virtusize-exam

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
api/: handler.py
tests/: test_wordcount.py
